--- a/WebApplication7/Views/Home/Index.cshtml
+++ b/WebApplication7/Views/Home/Index.cshtml
@@ -32,6 +32,7 @@
             <button onclick="appendToDisplay('0')" colspan="2">0</button>
             <button onclick="appendToDisplay('.')">.</button>
         </div>
+        <div>test</div>
     </div>
 
     <script src="script.js"></script>
